--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,108 @@ services:
     restart: unless-stopped
     ports: ["2181:2181"]
 
-  kafka:
+# --- KAFKA BROKER 1 ---
+  
+  kafka1:
     image: confluentinc/cp-kafka:7.7.5
-    container_name: kafka
+    container_name: kafka1
+    hostname: kafka1
+    depends_on: [zookeeper]
     restart: unless-stopped
-    ports: ["9092:9092"]
+    ports:
+      - "9092:9092"
+    volumes:
+      - ./kafka/security/kafka1:/etc/kafka/secrets:ro
+
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+
+      # SSL listener only
+      KAFKA_LISTENERS: SSL://0.0.0.0:9092
+      # For host testing, advertise localhost; if only containers will connect, use SSL://kafka1:9093
+      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: SSL:SSL
+
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.server.keystore.jks
+      KAFKA_SSL_KEYSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEY_PASSWORD: changeit
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.server.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: kafka1_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: kafka1_sslkey_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+
+
+  kafka2:
+    image: confluentinc/cp-kafka:7.7.5
+    container_name: kafka2
+    hostname: kafka2
     depends_on: [zookeeper]
+    restart: unless-stopped
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./kafka/security/kafka2:/etc/kafka/secrets:ro
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+
+      KAFKA_LISTENERS: SSL://0.0.0.0:9093
+      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: SSL:SSL
+      # KAFKA_INTER_BROKER_LISTENER_NAME: SSL
+      # KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.server.keystore.jks
+      KAFKA_SSL_KEYSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEY_PASSWORD: changeit
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.server.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: kafka2_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: kafka2_sslkey_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
+  kafka3:
+    image: confluentinc/cp-kafka:7.7.5
+    container_name: kafka3
+    hostname: kafka3
+    depends_on: [zookeeper]
+    restart: unless-stopped
+    ports:
+      - "9094:9094"
+    volumes:
+      - ./kafka/security/kafka3:/etc/kafka/secrets:ro
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+
+      KAFKA_LISTENERS: SSL://0.0.0.0:9094
+      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: SSL:SSL
+      # KAFKA_INTER_BROKER_LISTENER_NAME: SSL
+      # KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+
+      KAFKA_SSL_KEYSTORE_FILENAME: kafka.server.keystore.jks
+      KAFKA_SSL_KEYSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEY_PASSWORD: changeit
+      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.server.truststore.jks
+      KAFKA_SSL_TRUSTSTORE_PASSWORD: changeit
+      KAFKA_SSL_KEYSTORE_CREDENTIALS: kafka3_keystore_creds
+      KAFKA_SSL_KEY_CREDENTIALS: kafka3_sslkey_creds
+      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
 
   postgres:
     image: postgres:15-alpine
@@ -31,7 +121,7 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   dbt:
-    build: ./dbt            # ← build locally; no GHCR pull
+    build: ./dbt            # ??? build locally; no GHCR pull
     container_name: dbt
     working_dir: /usr/app
     environment:
@@ -48,7 +138,7 @@ services:
     ports: ["9090:9090"]
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-    depends_on: [kafka, postgres]
+    depends_on: [kafka1, kafka2, kafka3, postgres]
 
   grafana:
     image: grafana/grafana:10.4.5
@@ -61,3 +151,5 @@ services:
 
 volumes:
   pgdata:
+
+
